<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text"></string>
    <string name="true_Button">True</string>
    <string name="false_Button">False</string>
    <string name="next_Button"><![CDATA[Next>]]></string>
    <string name="placeholder_text">Hello world this is where we are going to add the actual text to be seen</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect_answer">Incorrect</string>
    <string name="question_text_format">Question %d / %d</string>
</resources>